2007-12-17 [paul]	0.8.0

	0.8.0 released

2007-12-17 [paul]	0.7.0cvs5

	* po/hu.po
	* po/it.po
		updated by Pader Rezso and Andrea Spadaccini

2007-12-03 [iwkse]	0.7.0cvs4

	* src/poppler_viewer.c
		Fix Cursors in a new window
			thanks to Colin

2007-11-30 [iwkse]	0.7.0cvs3

	* src/poppler_viewer.c
		Fix a leak with the mouse pointer

2007-11-30 [iwkse]	0.7.0cvs2

	* src/poppler_viewer.h
	* src/poppler_viewer.c
			Add clickable Links, internal and external

2007-11-29 [ticho]	0.7.0cvs1

	* configure.ac
		Updated claws-mail minimum version.

2007-11-19 [paul]	0.7.0

	0.7.0 released

2007-11-19 [paul]	0.6.0cvs6

	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Reszo, Andrea Spadaccini, Frederico Goncalves
		Guimaraes, and Andrej Kacian

2007-10-28 [colin]	0.6.0cvs5

	* src/poppler_viewer.c
		Fix build when Claws has been built with
		libgnomeprint

2007-10-10 [colin]	0.6.0cvs4

	* src/poppler_viewer.c
		Allow direct printing of PDF/PS documents.
		Printing preview works fine each time, real
		printing sometimes fails with "Error 
		Printing: Too many failed attempts". As 
		valgrind is silent, it's probably not a Claws
		bug.

2007-09-20 [paul]	0.6.0cvs3

	* po/it.po
		updated by Andrea Spadaccini

2007-09-03 [ticho]	0.6.0cvs2

	* src/poppler_viewer.c
		Fix my previous commit to actually make it work again.

2007-09-03 [ticho]	0.6.0cvs1

	* src/poppler_viewer.c
		Handle plural form properly.

2007-09-03 [paul]	0.6.0

	0.6.0 released

2007-09-03 [paul]	0.5.0cvs14

	* po/ca.po
	* po/es.po
	* po/fi.po
	* po/hu.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Flammie Pirinen, Pader Rezso

2007-08-16 [paul]	0.5.0cvs13

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-08-05 [iwkse]	0.5.0cvs12

	* src/poppler_viewer.c
			fix search to work with page index

2007-08-05 [iwkse]	0.5.0cvs11

	* configure.ac
		had a problem with CVS...

2007-08-05 [iwkse]	0.5.0cvs10
