@@ -108,3 +108,4 @@
 ( cvs diff -u -r 1.1.2.78 -r 1.1.2.79 src/poppler_viewer.c;  ) > 0.7.0cvs3.patchset
 ( cvs diff -u -r 1.1.2.79 -r 1.1.2.80 src/poppler_viewer.c;  ) > 0.7.0cvs4.patchset
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 po/hu.po;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 po/it.po;  ) > 0.7.0cvs5.patchset
+( cvs diff -u -r 1.1.2.80 -r 1.1.2.81 src/poppler_viewer.c;  ) > 0.8.0cvs1.patchset
